--- a/deploy.cfg
+++ b/deploy.cfg
@@ -1,4 +1,4 @@
-[kb_fastqc]
+[jrb_fastqc]
 kbase-endpoint = {{ kbase_endpoint }}
 job-service-url = {{ job_service_url }}
 workspace-url = {{ workspace_url }}
